Fixed project menu word wrap issue

--- a/app/styles/partials/_menus.scss
+++ b/app/styles/partials/_menus.scss
@@ -61,6 +61,8 @@
     //font-family: 'Aleo-Bold';
     font-family: 'Aleo-Regular';
     font-size: 18px;
+    word-wrap: break-word;
+
     //margin-left: 15px;
 
     background-color: $projectMenuLightColor;
